initialSetup.template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates initial resources.",
    "Parameters": {},
    "Resources": {
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsSupport": "true",
          "EnableDnsHostnames": "true",
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        }
      },
      "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        }
      },
      "AttachGateway": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "InternetGatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "Subnet1RouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        }
      },
      "Subnet1Route": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "AttachGateway",
        "Properties": {
          "RouteTableId": {
            "Ref": "Subnet1RouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "Subnet1RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "Subnet1"
          },
          "RouteTableId": {
            "Ref": "Subnet1RouteTable"
          }
        }
      },
      "Subnet2RouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        }
      },
      "Subnet2Route": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "AttachGateway",
        "Properties": {
          "RouteTableId": {
            "Ref": "Subnet2RouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "Subnet2RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "Subnet2"
          },
          "RouteTableId": {
            "Ref": "Subnet2RouteTable"
          }
        }
      },
      "Subnet3RouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        }
      },
      "Subnet3Route": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "AttachGateway",
        "Properties": {
          "RouteTableId": {
            "Ref": "Subnet3RouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "Subnet3RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "Subnet3"
          },
          "RouteTableId": {
            "Ref": "Subnet3RouteTable"
          }
        }
      },
      "Subnet1": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "ap-southeast-2a",
          "CidrBlock": "10.0.1.0/24",
          "MapPublicIpOnLaunch": "true",
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "Subnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "ap-southeast-2b",
          "CidrBlock": "10.0.2.0/24",
          "MapPublicIpOnLaunch": "true",
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "Subnet3": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "ap-southeast-2c",
          "CidrBlock": "10.0.3.0/24",
          "MapPublicIpOnLaunch": "true",
          "VpcId": {
            "Ref": "VPC"
          }
        }
      }
    },
    "Outputs": {
      "VPCId": {
        "Description": "VPC ID",
        "Value": {
          "Ref": "VPC"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}-VPCID"
          }
        }
      },
      "Subnet1": {
        "Description": "Subnet 1 ID",
        "Value": {
          "Ref": "Subnet1"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}-Subnet1ID"
          }
        }
      },
      "Subnet2": {
        "Description": "Subnet 2 ID",
        "Value": {
          "Ref": "Subnet2"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}-Subnet2ID"
          }
        }
      },
      "Subnet3": {
        "Description": "Subnet 3 ID",
        "Value": {
          "Ref": "Subnet3"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}-Subnet3ID"
          }
        }
      }
    }
  }
